# music-player

./: .gitignore  .prettierrc.js  diesel.toml  package-lock.json  package.json  splashscreen.html  vite.config.ts
.github/workflows/: pipeline-check.yml  publish-release.yml
src/: App.tsx  firstRunRouter.tsx  i18n.js  main.tsx  schema.rs  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/lib/: sqlite3.lib
src-tauri/migrations/2023-11-15-194910_create_providers/: up.sql
src-tauri/migrations/2023-11-23-205835_create_songs/: down.sql  up.sql
src-tauri/src/: main.rs
src-tauri/src/database/: database_manager.rs  mod.rs
src-tauri/src/database/models/: lib.rs  models.rs  schema.rs
src-tauri/src/encryption/: encrypt_android.rs  encrypt_macos_ios.rs  encrypt_shared.rs  encrypt_windows.rs  mod.rs
src-tauri/src/enums/: connection_type.rs  mod.rs
src-tauri/src/helpers/: mod.rs  subsonic_credentials.rs
src-tauri/src/managers/: mod.rs  subsonic_manager.rs
src-tauri/src/managers/clients/: mod.rs  subsonic_client.rs
src-tauri/src/managers/clients/responses/: mod.rs  subsonic_ping_response.rs  subsonic_search3_response.rs
src-tauri/src/models/: greet.rs
src/assets/locales/en/: translation.json
src/assets/locales/nl/: translation.json
src/components/: providerSelect.tsx
src/helpers/: history.ts
src/models/: greet.ts  provider.ts
src/pages/: addSubsonic.tsx  firstRun.tsx  home.tsx
src/routing/: browserRouter.tsx
src/types/: props.ts
